Revision history for Perl extension IPC::System::Simple.

1.20  Sat Jan  9 15:08:41 AUSEST 2010

        * TEST: t/win32.t no longer claims to have more tests than
          it really has.  This fixes an install issue under Windows.
          RT #53124.  Thanks to Erez Schatz and Curtis Jewell for
          spotting this.

1.19  Fri Dec  4 14:14:25 AUSEST 2009

        * TEST: Added tests to ensure correct behaviour when
          calling commands in Windows which are contained in directories
          that contain spaces. (These tests are currently skiped,
          as they're testing for a known bug.)

        * BUGFIX: Spurious warnings about redefining POSIX macros
          no longer plague Windows systems.

1.18  Sun Feb  8 19:09:15 AUSEDT 2009

        * BUGFIX: IPC::System::Simple should now compile cleanly
          under 5.6.0 and 5.6.1 (as well as 5.6.2+).  Many thanks
          to David Golden for spotting this bug.  (RT #43098)

        * DOCUMENTATION: "Advanced" is now spelt correctly under
          in the section "Advanced Usage".  Many thanks to
          Raymond Wan for spotting this typo.  (RT #42705)

1.17  Fri Dec 19 00:45:16 AUSEDT 2008
        * TEST: Tests to ensure that passing undefined values to
          systemx() do not produce malformed errors, but instead
          well-formed errors.  Many thanks to Nadim Khemir for
          spotting this.  RT #41149.

        * BUGFIX: Workaround for a bug under Perl 5.10 where on
          some platforms coredumps were not being reported in $?.
          Many thanks to the Debian Perl folks for finding this,
          particularly Gregor Herrmann.

        * TEST: Better diagnostics from t/08_core.t.

        * TEST: t/08_core.t now cleans up its core files after running.
          Thanks to Gregor Herrmann for spotting this.

        * TEST: t/08_core.t is now a main test, rather than an
          author-only test.

        * BUGFIX: Attempting to call an undefined command is now